Spacing issue again.

--- a/jayd3e/static/css/style.css
+++ b/jayd3e/static/css/style.css
@@ -95,7 +95,7 @@
     padding-bottom:10px;
 }
 .body p {
-    padding-bottom: 5px;
+    padding-bottom: 10px;
 }
 .operations {
     display: inline; 
